crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__event_activity.snap
---
source: crates/rimz-sidebar/src/render.rs
assertion_line: 424
expression: screen
---
┌ Rimz | ws_0123456789abcdef01234567 ──────────────────────────────────────────┐
│Generated <elapsed> ago                                                            │
│                                                                              │
│Needs your attention                                                          │
│-                                                                             │
│                                                                              │
│Resolver is working                                                           │
│-                                                                             │
│                                                                              │
│Recently answered                                                             │
│-                                                                             │
│                                                                              │
│Recent activity                                                               │
│rimz       event     build.started: Building web (<elapsed> ago)                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
