crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__first_run_nudge.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
expression: screen
---
┌ query-engine ────────────────────────────────────────────────────────────────┐
│no agents yet                                                                 │
│install hooks:                                                                │
│rimz hooks install claude                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
