crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__first_run_nudge_wired.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
expression: screen
---
 ⌘ query-engine

 ¤ 0   ◎ 0
 ──────────────────────────────────────────────────────────────────────────────

 no agents yet
 run claude or codex
 in a pane to begin









                                   ? for help
