crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__fleet_ledger.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 767
expression: screen
---
 ⌘ query-engine

 ¤ 1                           ◇ 3M ↘ 300k ↗ 3M ◍ 120k ◌ 6M
 ◎ 12                                                $40.23
 ──────────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k                    $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━━━────────────────────────────── 38.2%
▌  ◇ 4k ↘ 1k ↗ 2k ◍ 6k ◌ 68k











 ──────────────────────────────────────────────────────────
 Claude v2.1.158 · Claude Max                          ⇅ rc

  ▐▛███▜▌  ◇ 486k ↘ 422k ↗ 64k ◍ 12k ◌ 68k            $3.50
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱  ↻ <reset>
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱  ↻ <reset>

 W: ◎  92  ◇ 21.0M ↘ 2.3M ↗ 18.7M ◌  51.0M          $312.40
 M: ◎ 212  ◇ 33.0M ↘ 4.3M ↗ 28.7M ◌ 121.0M        $1,240.57

                         ? for help
