crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__four_groups_and_native_actions.snap
---
source: crates/rimz-sidebar/src/render.rs
assertion_line: 424
expression: screen
---
┌ Rimz | ws_0123456789abcdef01234567 ──────────────────────────────────────────────────────────┐
│Generated <elapsed> ago                                                                              │
│                                                                                              │
│Needs your attention                                                                          │
│Worktree: billing-service                                                                     │
│claude     waiting   permission: psql DROP TABLE invoices [focus] [dismiss]                   │
│Worktree: Workspace                                                                           │
│deploy.sh  waiting   question: Deploy staging? [yes] [no]                                     │
│                                                                                              │
│Resolver is working                                                                           │
│-                                                                                             │
│                                                                                              │
│Recently answered                                                                             │
│deploy.sh  answered  question: Deploy staging? (sidebar, <elapsed> ago)                            │
│                                                                                              │
│Recent activity                                                                               │
│-                                                                                             │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
