crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__group_cap_with_overflow.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 389
expression: screen
---
┌ query-engine ────────────────────┐
│▌main                           9◕│
│▎○ codex   task-0               <t>│
│▎  ─────────────────────────────  │
│ ○ codex   task-1               <t>│
│   ─────────────────────────────  │
│ ○ codex   task-2               <t>│
│   ─────────────────────────────  │
│ ○ codex   task-3               <t>│
│   ─────────────────────────────  │
│ ○ codex   task-4               <t>│
│   ─────────────────────────────  │
│ ○ codex   task-5               <t>│
│   ─────────────────────────────  │
│  +3 more                         │
└──────────────────────────────────┘
