crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__l0_density_minimal_row.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ codex
▌  compile
       ? for help
