crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__max_rows_no_overflow.snap
---
source: crates/rimz-sidebar/src/render.rs
assertion_line: 424
expression: screen
---
┌ Rimz | ws_0123456789abcdef01234567 ──────────────────────────────────────────┐
│Generated <elapsed> ago                                                            │
│                                                                              │
│Needs your attention                                                          │
│Worktree: main                                                                │
│claude     waiting   permission: decision-0 [focus] [dismiss]                 │
│claude     waiting   permission: decision-1 [focus] [dismiss]                 │
│claude     waiting   permission: decision-2 [focus] [dismiss]                 │
│claude     waiting   permission: decision-3 [focus] [dismiss]                 │
│claude     waiting   permission: decision-4 [focus] [dismiss]                 │
│claude     waiting   permission: decision-5 [focus] [dismiss]                 │
│claude     waiting   permission: decision-6 [focus] [dismiss]                 │
│claude     waiting   permission: decision-7 [focus] [dismiss]                 │
│                                                                              │
│Resolver is working                                                           │
│-                                                                             │
│                                                                              │
│Recently answered                                                             │
│-                                                                             │
│                                                                              │
│Recent activity                                                               │
│-                                                                             │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
