crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__process_row_resource_stats.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 0
 ──────────────────────────────────────────────────────

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ cargo                          C 34%  M 512M  ⇅ 8M/s
▌  cargo build --release

 no agents yet
 install hooks:
 rimz hooks install claude
                       ? for help
