crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__provider_dashboard.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 767
expression: screen
---
 ⌘ query-engine

 ¤ 1
 ◎ 0
 ────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                     ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k              $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━────────────────────────── 38.2%
▌  ◇ 4k ↘ 1k ↗ 2k ◍ 6k ◌ 68k








 ────────────────────────────────────────────────────
 Claude v2.1.158 · Claude Max                    ⇅ rc

  ▐▛███▜▌  ◇ 486k ↘ 422k ↗ 64k ◍ 12k ◌ 68k      $3.50
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱  ↻ <reset>
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱  ↻ <reset>

 Codex v0.135.0 · ChatGPT Pro

  ▐▛███▜▌  ◇ 88k ↘ 76k ↗ 12k ◍ 0 ◌ 8k           $1.20
 ▝▜█████▛▘ ∞   ▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱
   ▘▘ ▝▝

                      ? for help
